apps/gptapi/overlays/staging/gptapi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gptapi
spec:
  rules:
    - host: gpt.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: gptapi
                port:
                  number: 4001
            path: /stats
            pathType: Prefix
          - backend:
              service:
                name: gptapi
                port:
                  number: 4001
            path: /context
            pathType: Prefix
          - backend:
              service:
                name: gptapi
                port:
                  number: 4001
            path: /graph
            pathType: Prefix
  tls:
    - hosts:
        - gpt.contextsuite.com
      secretName: star-contextsuite-com
